Fixed bug #33512 (Add missing support for isset()/unset() overloading to complement the property get/set methods)